Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -910,14 +910,14 @@
     "longitude-abb": "Long",
     "look-for-gaps": "Buscar huecos",
     "lot": "Menge",
-    "low-security": "Low security",
+    "low-security": "Niedrige Sicherheit",
     "machine": "Maschine",
     "machines": "Maschinen",
     "macro-account-note-info": "Schlüssel zur Werteersetzung im Makro",
     "mail-server-error": "Error al conectar al servidor de correo",
     "mail-test-error": "mail-test-error",
     "mail-test-ok": "Erfolgreicher E-Mail-Test",
-    "mailer": "Mail controller",
+    "mailer": "Mail-Controller",
     "main-address": "Hauptadresse",
     "manage": "manage",
     "manage-installation": "Administrar",
@@ -1032,7 +1032,7 @@
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "Nicht öffentlich",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Inhalt nicht gespeichert",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
     "not-valid-image": "No es una imagen válida",
@@ -1059,7 +1059,7 @@
     "only-closed": "Nur geschlossen",
     "only-insert": "Sólo añadir",
     "only-owner-data": "only-owner-data",
-    "only-pending": "only-pending",
+    "only-pending": "Nur ausstehend",
     "only-suspended": "Nur ausgesetzt",
     "open": "öffnen",
     "open-exercise": "open-exercise",
@@ -1258,7 +1258,7 @@
     "refresh": "Aktualisierung",
     "refresh-page": "Seite neu laden",
     "refund-amount": "Rückzahlungsbetrag",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Rückzahlung der Zahlung %document%",
     "refunds": "Rückerstattungen",
     "register": "Registrieren",
     "register-installation": "Instalation registrieren",
@@ -1354,7 +1354,7 @@
     "sent-a-video": "Envió un video",
     "sent-message-by": "Nachricht gesendet von %nick% am %date%",
     "sepa-suffix": "sepa-suffix",
-    "september": "Septiembre",
+    "september": "September",
     "sequences": "Reihenfolgen",
     "serial-number": "Seriennummer",
     "serie": "Serie",
@@ -1581,7 +1581,7 @@
     "unpaid": "Unbezahlt",
     "until-accounting-entry": "until-accounting-entry",
     "until-date": "until-date",
-    "until-subaccount": "until-subaccount",
+    "until-subaccount": "Bis Unterkonto",
     "update": "aktuallisieren",
     "update-stock": "Lagerbestand aktualisieren",
     "update-supplier-prices": "aktullieren Lieferantenpreise",
