--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -414,7 +414,7 @@
     "delete-closing": "Ixte idazpenak ezabatu",
     "delete-data": "Datuak ezabatu",
     "delete-file": "Artxiboa ezabatu",
-    "delete-logs": "Historiala ezabatu",
+    "delete-logs": "Aldaketak ezabatu",
     "delete-opening": "Irekitze idazpena ezabatu",
     "delete-record": "Erregistroa ezabatu",
     "Deleted": "Ezabatua",
