--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -193,7 +193,7 @@
     "cant-create-folder": "Impossibile creare la cartella.",
     "cant-create-subaccount-supplier": "Impossibile creare il subaccount per il provider",
     "cant-delete-audit-log": "Impossibile eliminare un registro di audit",
-    "cant-delete-default-company": "cant-delete-default-company",
+    "cant-delete-default-company": "Impossibile eliminare l'azienda predefinita",
     "cant-delete-default-country": "Impossibile eliminare il paese predefinito",
     "cant-delete-default-currency": "cant-delete-default-currency",
     "cant-delete-default-payment-method": "cant-delete-default-payment-method",
@@ -387,7 +387,7 @@
     "dateentry-wildcard-info": "dateentry-wildcard-info",
     "day": "giorno",
     "days": "days",
-    "days-log-retention": "Giorni di conservazione dei log",
+    "days-log-retention": "giorni di conservazione log",
     "days-until-expiration": "giorni-fino-scadenza",
     "db-host": "Database del server",
     "db-name": "Nome del database",
@@ -469,7 +469,7 @@
     "document": "Documento",
     "document-configuration": "document-configuration",
     "document-report": "Reports documenti",
-    "document-sequence": "document-sequence",
+    "document-sequence": "sequenza del documento",
     "document-sequences": "document-sequences",
     "document-states": "Document states",
     "document-type": "Tipo di documento",
@@ -663,9 +663,9 @@
     "general-concepts": "Concetti generali",
     "general-data": "informazioni generali",
     "generate": "Generate",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "generare voci contabili",
     "generate-accounting-entry": "Genera voce contabile",
-    "generate-doc-type": "Generate document type",
+    "generate-doc-type": "Genera tipo di documento",
     "generate-invoice": "Crea Fattura",
     "generate-receipts": "genera-ricevute",
     "generate-settlements": "generare liquidazioni",
@@ -695,7 +695,7 @@
     "greater-than": "Più grande di",
     "grid-help": "grid-help",
     "group": "Gruppo",
-    "group-accounts": "group-accounts",
+    "group-accounts": "Agruppa conti",
     "group-by-day": "Raggruppa per giorno",
     "group-by-day-unixtime": "group-by-day-unixtime",
     "group-by-month": "Raggruppa per mese",
@@ -874,7 +874,7 @@
     "level2": "Livello 2",
     "level3": "Livello 3",
     "level4": "Level 4",
-    "liabilities": "Liabilities",
+    "liabilities": "passività",
     "library": "Biblioteca",
     "license": "Licenza",
     "like-than": "Mi piace",
@@ -887,14 +887,14 @@
     "location": "Posizione",
     "lock-accounting": "Blocca contabilità",
     "lock-entry": "lock-entry",
-    "lock-invoice": "lock-invoice",
+    "lock-invoice": "blocca fattura",
     "lock-unlock": "Lock-Unlock",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
     "locked": "Bloccato",
     "log": "Log",
     "login": "Accesso",
     "login-cookie-fail": "Cookie di sessione fallito",
-    "login-image": "Imagen de login",
+    "login-image": "immagine di login",
     "login-ok": "Accedi con successo (cookie). Utente: '0'",
     "login-password-fail": "Accesso fallito",
     "login-text": "Accesso",
@@ -911,7 +911,7 @@
     "look-for-gaps": "Cerca spazi vuoti",
     "lot": "lotto",
     "low-security": "Low security",
-    "machine": "machine",
+    "machine": "macchina",
     "machines": "machines",
     "macro-account-note-info": "Keys for values replacement macro",
     "mail-server-error": "Error al conectar al servidor de correo",
@@ -977,7 +977,7 @@
     "month-6": "Junio",
     "month-7": "Julio",
     "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-9": "settembre",
     "month-name": "Month Name",
     "month-wildcard-info": "Mese corrente (della data corrente)",
     "monthly": "Monthly",
@@ -1007,7 +1007,7 @@
     "new-password": "nuova password",
     "new-price": "new-price",
     "new-refund": "Nuovo rimborso",
-    "new-supplier": "new supplier",
+    "new-supplier": "nuovo fornitore",
     "news": "notizie",
     "next": "Il prossimo",
     "nick": "tacca",
@@ -1078,7 +1078,7 @@
     "order-email-text": "order-email-text",
     "orders": "ordini",
     "origin": "origin",
-    "origin-warehouse": "Origin warehouse",
+    "origin-warehouse": "magazzino di origine",
     "original": "Originale",
     "original-file": "File originale",
     "other-data": "Altri dati",
@@ -1087,7 +1087,7 @@
     "page": "pagina",
     "page-break": "Salto de página",
     "page-configuration": "Configuration Page",
-    "page-not-found": "Página no encontrada",
+    "page-not-found": "Pagina non trovata",
     "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
     "page-total-amount": "importo-totale-pagina",
@@ -1125,10 +1125,10 @@
     "pending": "pending",
     "pending-invoices-button": "Fatture in sospeso:",
     "pending-orders-button": "pending-orders-button",
-    "pending-reception": "Pending reception",
+    "pending-reception": "ricezione in sospeso",
     "percentage": "Percentage",
     "percentage-commission": "% Commission",
-    "percentage-discount": "percentage-discount",
+    "percentage-discount": "Sconto percentuale",
     "percentage-surcharge": "% Surcharge",
     "percentage-vat": "% IVA",
     "period": "periodo",
@@ -1162,7 +1162,7 @@
     "plugin-unsupported-version": "plugin-versione-non-supportata",
     "plugin-update": "Aggiornamento del plugin %pluginName% alla versione %version%",
     "plugins": "Plugins",
-    "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
+    "plugins-p": "I plugin permettono di aggiungere nuove funzionalità. Attiva quelli di cui hai bisogno ora, o fallo quando vuoi dal menu amministratore.",
     "points": "Punti",
     "points-of-interest": "Punti di interesse",
     "port": "Puerto",
@@ -1268,12 +1268,12 @@
     "registered-installation-p": "registered-installation-p",
     "regularization-operation": "Operazione di regolarizzazione",
     "reject": "Rechazar",
-    "rejected": "rejected",
+    "rejected": "rifiutato",
     "related": "related",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "reloading",
-    "remove-filter": "remove-filter",
+    "remove-filter": "rimuovi filtro",
     "remove-from-list": "Rimuovi dalla lista",
     "removing-logs-until": "Rimozione log fino al %date%",
     "renew": "renew",
@@ -1290,11 +1290,11 @@
     "report": "report",
     "report-grouping-account": "Group by account",
     "report-non-grouping-account": "Non group by account",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Questo rapporto consente di ottenere la scomposizione delle imposte sulle fatture di acquisto o di vendita del range selezionato",
     "reports": "Rapporti",
     "request-sent": "request-sent",
     "required": "richiesto",
-    "requires-core": "Requiere FacturaScripts %version%",
+    "requires-core": "Richiede FacturaScripts %version%",
     "reserved": "Riservato",
     "reset": "Ripristina correttamente le impostazioni, premere <a href=\" %1$s#avanzado\">qui<\/a> per continuare.",
     "resource": "Resource",
@@ -1372,7 +1372,7 @@
     "setup-options": "Opzioni di installazione",
     "shipping": "Spedizione",
     "shipping-address": "Indirizzo di spedizione",
-    "shop": "Tienda",
+    "shop": "negozio",
     "shops": "negozi",
     "short": "Corto",
     "short-name": "Nome breve",
@@ -1382,16 +1382,16 @@
     "show-expired-receipts": "Mostra ricevute scadute",
     "show-month-stats": "Mostra statistiche mensili",
     "show-pending-remittances": "Mostrar remesas pendientes",
-    "show-price": "Show price on print",
+    "show-price": "Mostra prezzo su stampa",
     "show-quantity": "Show quantity on print",
     "show-section-new": "Mostra sezione creazione",
     "signature": "Signature",
     "simple": "Semplice",
-    "simplified": "Simplificada",
+    "simplified": "semplificata",
     "size": "size",
     "sketch": "Schizzo",
     "sketch-invoice-warning": "Questa fattura è ancora uno schizzo. Rendila ufficiale cambiando il suo stato in emesso",
-    "small": "small",
+    "small": "piccolo",
     "smaller-than": "Più piccolo di",
     "soap-extension-not-installed": "La extensión SOAP non è attiva in PHP. Contatta il tuo fornitore di hosting per attivarla.",
     "social-security-number": "Social Security number",
@@ -1406,7 +1406,7 @@
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Conto speciale",
-    "special-accounting-entries": "special-accounting-entries",
+    "special-accounting-entries": "Voci contabili speciali",
     "special-accounts": "special-accounts",
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "File XLS",
@@ -1462,7 +1462,7 @@
     "supplier-code": "supplier-code",
     "supplier-delivery-note": "Supplier delivery note",
     "supplier-delivery-notes": "Supplier delivery notes",
-    "supplier-estimation": "Supplier estimation",
+    "supplier-estimation": "Stima fornitore",
     "supplier-estimations": "Supplier estimations",
     "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
     "supplier-invoice": "Supplier invoice",
@@ -1486,7 +1486,7 @@
     "table": "tabella",
     "table-checked": "Tabella 0 controllata.",
     "table-not-found": "tabella-non-trovata",
-    "table-size": "table-size",
+    "table-size": "Dimensione della tabella",
     "tables": "disegnare",
     "task": "task",
     "tasks": "tasks",
@@ -1495,7 +1495,7 @@
     "tasks-personal-title": "Compiti personali",
     "tax": "Imposta",
     "tax-area": "tax-area",
-    "tax-areas": "tax-areas",
+    "tax-areas": "aree fiscali",
     "tax-base": "Base Imponibile",
     "tax-credit-account": "Credit account for taxes",
     "tax-debit-account": "Conto addebito per tasse",
@@ -1532,7 +1532,7 @@
     "title-url": "Title URL",
     "to": "A",
     "to-refund": "Da rimborsare",
-    "to-report": "Informar",
+    "to-report": "Segnala",
     "today": "Oggi",
     "total": "Totale",
     "total-amount": "somma totale",
@@ -1565,7 +1565,7 @@
     "type-notice": "Tipo di avviso",
     "type-success": "type-success",
     "type-warning": "Type warning",
-    "unbalance": "Unbalance",
+    "unbalance": "sbilanciato",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "unchecked",
     "under-minimums": "under-minimums",
@@ -1592,7 +1592,7 @@
     "upload-file": "Subir archivo",
     "uploaded-at": "Uploaded at",
     "url": "Sito web",
-    "use-gaps": "use-gaps",
+    "use-gaps": "usa spazi vuoti",
     "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "utente",
     "user-and-config": "Utente e configurazione",
