--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -163,7 +163,7 @@
     "blocked": "Bloqueado",
     "blocked-date": "Bloqueado em",
     "body": "Corpo",
-    "book": "Reserve",
+    "book": "Reservar",
     "box-closed-ok": "Caixa fechada corretamente",
     "boxes": "Caixas",
     "browse": "Navegar",
@@ -271,7 +271,7 @@
     "commercial-terms": "Termos comerciais",
     "commission": "commission",
     "commission-general-info": "commission-general-info",
-    "commission-settlement": "commission-settlement",
+    "commission-settlement": "Liquidação de comissões %code%",
     "commissions": "Comissões",
     "common-data": "Dados comuns",
     "common-error": "Erro",
@@ -288,7 +288,7 @@
     "component": "Component",
     "concept": "Concept",
     "conditions": "conditions",
-    "configure-columns": "Column Configurator",
+    "configure-columns": "Configurador de colunas",
     "confirm": "confirme",
     "confirm-delete": "Confirmar excluir?",
     "connect": "Conectar",
@@ -347,7 +347,7 @@
     "customer-account-not-found": "customer-account-not-found",
     "customer-banking-accounts": "Contas bancárias",
     "customer-code": "Código Cliente",
-    "customer-commission-info": "customer-commission-info",
+    "customer-commission-info": "Informações sobre comissão do cliente",
     "customer-delivery-note": "Nota de Entrega de Cliente",
     "customer-delivery-notes": "Notas de Entrega de Clientes",
     "customer-estimation": "Estimativa de Cliente",
@@ -401,7 +401,7 @@
     "december": "Dezembro",
     "decimal-separator": "Decimal",
     "decimals": "Decimais",
-    "default": "Default",
+    "default": "Padrão",
     "default-customer": "Cliente Padrão",
     "default-retention": "retenção-padrão",
     "default-role": "F",
@@ -469,7 +469,7 @@
     "document": "Documento",
     "document-configuration": "document-configuration",
     "document-report": "Relatório de documentos",
-    "document-sequence": "document-sequence",
+    "document-sequence": "sequencia-documento",
     "document-sequences": "Sequências de documentos",
     "document-states": "Document states",
     "document-type": "Tipo documento",
@@ -500,7 +500,7 @@
     "editable": "Editable",
     "email": "O email",
     "email-bcc": "Cópia oculta do email",
-    "email-cc": "Email Carbon Copy",
+    "email-cc": "Email com cópia",
     "email-not-configured": "e",
     "email-not-sent": "Not sent",
     "email-notification": "Notificação por email",
@@ -538,7 +538,7 @@
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "error-deleting-lines",
-    "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
+    "error-no-name-in-settings": "Erro ao testar a vista %viewName%. Nenhuma coluna 'name' no xml",
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
     "error-reading-file": "Erro ao ler o arquivo '0'",
@@ -692,7 +692,7 @@
     "generated-supplier-orders": "0 pedidos de fornecedores gerados.",
     "global-dto": "global-dto",
     "global-dto-2": "Dto global 2",
-    "greater-than": "Melhor que",
+    "greater-than": "Maior que",
     "grid-help": "grid-help",
     "group": "Grupo",
     "group-accounts": "group-accounts",
@@ -718,7 +718,7 @@
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "health",
-    "height": "Alto",
+    "height": "Altura",
     "hello": "Olá",
     "help": "Socorro",
     "help-button-p": "Consulta la ayuda en cada pantalla",
@@ -764,7 +764,7 @@
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador do FacturaScripts 2018 (Alpha)",
-    "installer-p": "Bem-vindo ao instalador FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
+    "installer-p": "Bem-vindo ao instalador do FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
     "installer-requirements": "As seguintes extensões e funções são necessárias para FacturaScripts:",
     "integrity-check": "Integrity check",
     "integrity-check-help": "This is a check of system integrity, described as",
@@ -814,7 +814,7 @@
     "january": "Janeiro",
     "job-name": "Nome do Trabalho",
     "journal": "Journal",
-    "journal-closing": "journal-closing",
+    "journal-closing": "Fecho de jornal",
     "journal-opening": "journal-opening",
     "journals": "Journals",
     "july": "Julho",
@@ -856,7 +856,7 @@
     "last-price-estimation": "Último preço de orçamento",
     "last-price-sale": "Último preço de venda",
     "last-purchase-price": "último preço de compra",
-    "last-quarter": "last-quarter",
+    "last-quarter": "Último trimestre",
     "last-semester": "Último semestre",
     "last-trimester": "Último trimestre",
     "last-update": "Última mudança",
@@ -1014,7 +1014,7 @@
     "no": "Não",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
-    "no-extra-lines": "no-extra-lines",
+    "no-extra-lines": "Não adicionar linhas extras",
     "no-gaps-found": "N",
     "no-invoice": "sem fatura",
     "no-outstanding-amount": "no-outstanding-amount",
@@ -1222,7 +1222,7 @@
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
     "pvptotal-line-error": "Erro no valor pvptotal da linha 0 do documento. Valor correto: 1",
     "quantity": "Quantidade",
-    "quantity-abb": "quantity-abb",
+    "quantity-abb": "Quantidade-abrev",
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
@@ -1241,7 +1241,7 @@
     "receipt": "receipt",
     "receipt-expense-account": "receipt-expense-account",
     "receipts": "receipts",
-    "record-deleted-correctly": "Registro eliminado corretamente!",
+    "record-deleted-correctly": "Registro excluído corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "record-not-found",
     "record-save-error": "An error occurred while saving the record",
@@ -1251,7 +1251,7 @@
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
     "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Retificativa",
-    "rectifying-serie": "rectifying-serie",
+    "rectifying-serie": "Série retificativa",
     "redirect": "Redirección",
     "reference": "Referência",
     "reference+description": "Reference + Description",
@@ -1319,7 +1319,7 @@
     "sales-subaccount-not-found": "sales-subaccount-not-found",
     "same-group": "Mesmo grupo",
     "saturday": "sábado",
-    "save": "Salve ",
+    "save": "Salvar",
     "save-data": "Guardar dados",
     "save-filter": "Salvar Filtros",
     "sdk": "sdk",
@@ -1336,7 +1336,7 @@
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
     "selector-number": "Seletor",
-    "send": "send",
+    "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
@@ -1414,7 +1414,7 @@
     "start": "Inicio",
     "start-date": "Data de início",
     "start-hour": "Hora de início",
-    "start-time": "start-time",
+    "start-time": "Hora de início",
     "starting-cron": "Iniciando cron para FacturaScripts ...",
     "state": "Estado",
     "states": "Estados",
@@ -1451,7 +1451,7 @@
     "sum": "Soma",
     "sum-netos-line-tax-must-be": "A soma dos líquidos das linhas de IVA deve ser: %lineNet%",
     "sum-total-line-tax-must-be": "A soma dos impostos totais das linhas de IVA deve ser: %lineTotalTax%",
-    "summary": "Summary",
+    "summary": "Resumo",
     "sums-and-balances": "Sumas y saldos",
     "sunday": "domingo",
     "supplied": "abastecido",
@@ -1494,7 +1494,7 @@
     "tasks-component-title": "Tarefas",
     "tasks-personal-title": "Tarefas pessoais",
     "tax": "Imposto",
-    "tax-area": "tax-area",
+    "tax-area": "Área de impostos",
     "tax-areas": "tax-areas",
     "tax-base": "Tax base",
     "tax-credit-account": "Credit account for taxes",
@@ -1558,20 +1558,20 @@
     "type": "Tipo",
     "type-alert": "Type alert",
     "type-critical": "Type critical",
-    "type-debug": "Type debug",
+    "type-debug": "Tipo debug",
     "type-emergency": "Tipo de emergência",
     "type-error": "Type error",
     "type-info": "Informação do tipo",
     "type-notice": "Tipo aviso",
     "type-success": "type-success",
-    "type-warning": "Type warning",
+    "type-warning": "Tipo de advertência",
     "unbalance": "Desequilíbrio",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Sem checar",
-    "under-minimums": "under-minimums",
+    "under-minimums": "Abaixo do mínimo",
     "undo": "Desfazer",
     "unit-profit": "lucro unitário",
-    "unit-purchase-price": "unit-purchase-price",
+    "unit-purchase-price": "Preço de compra por unidade",
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
@@ -1583,16 +1583,16 @@
     "until-date": "until-date",
     "until-subaccount": "until-subaccount",
     "update": "update",
-    "update-stock": "Update stock",
+    "update-stock": "Atualizar estoque",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
-    "update-time": "update-time",
+    "update-time": "Hora de atualização",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Uploaded at",
     "url": "Local na rede Internet",
-    "use-gaps": "use-gaps",
+    "use-gaps": "Usar lacunas",
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
     "user": "Do utilizador",
     "user-and-config": "Usuario y configuración",
@@ -1618,7 +1618,7 @@
     "vat-number-not-vies": "O número '%vat-number%' não está registrado no sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "Registro de VAT",
-    "vat-regularization": "VAT Regularization",
+    "vat-regularization": "Regularização de IVA",
     "vehicle": "Vehículo",
     "verified": "verificado",
     "version": "Versão",
@@ -1634,7 +1634,7 @@
     "warehouses": "Armazéns",
     "warning": "<b> Atenção <\/ b>",
     "warnings": "Avisos",
-    "web": "Rede",
+    "web": "Web",
     "website": "Local na rede Internet",
     "wednesday": "quarta-feira",
     "weeks": "Semanas",
@@ -1657,7 +1657,7 @@
     "working-hours": "Horário de trabalho",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
-    "x-operation": "x-operation",
+    "x-operation": "Operação sobre X",
     "y-column": "Coluna Y",
     "year": "Ano",
     "year-wildcard-info": "Ano atual (da data de hoje)",
