--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -414,7 +414,7 @@
     "delete-closing": "Eliminar assentaments de tancament",
     "delete-data": "Borrar senyes",
     "delete-file": "Esborrar arxiu",
-    "delete-logs": "Eliminar històrial",
+    "delete-logs": "Eliminar històric",
     "delete-opening": "Eliminar l'assentament d'obertura",
     "delete-record": "Borrar el registre",
     "Deleted": "Eliminat",
@@ -523,7 +523,7 @@
     "enable-api": "Activar el API",
     "enable-updates-beta": "Activar actualitzacions beta",
     "enabled": "Activat",
-    "enabled-plugins": "Plugins actius",
+    "enabled-plugins": "Connectors actius",
     "encrypt": "Sifrar",
     "end-date": "Data de fi",
     "end-time": "Hora de finalització",
@@ -1013,7 +1013,7 @@
     "nick": "Sobrenom",
     "no": "No",
     "no-data": "No hi han senyes",
-    "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-data-received-form": "Cap dada rebuda pel formulari",
     "no-extra-lines": "No afegir línies extra",
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "Sense factura",
@@ -1103,7 +1103,7 @@
     "parent-group-cant-be-the-same-group": "El grup pare no pot ser el grup mateix",
     "parent-group-loop": "El Grup Pare %parentGroup% està causant una relació circular.",
     "partnumber": "Número de peça",
-    "passenger": "Pasajero",
+    "passenger": "Passatger",
     "password": "Contrasenya",
     "pattern": "Patró",
     "pattern-without-number": "El patró triat no inclou número, per tant és molt probable que generi codis duplicats.",
@@ -1502,7 +1502,7 @@
     "tax-transport": "Imposts del transport",
     "taxes": "Imposts",
     "telemetry-data-to-send": "telemetry-data-to-send",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Prefix telefònic",
     "template": "Plantilla",
     "template-error": "Error en la plantilla",
     "template-not-found": "No s'ha trobat la plantilla",
@@ -1595,7 +1595,7 @@
     "use-gaps": "Usar buits",
     "use-holes-invoices-esp": "Si desmarques l'ús d'espais en factures i en treus alguna es quedarà l'espai en la facturació i tindràs problemes amb hisenda",
     "user": "Usuari",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Usuari i configuració",
     "users": "Usuaris",
     "using-apc": "Usant la caché APC",
     "using-filecache": "Usant el Filecache",
