--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -14,7 +14,7 @@
     "account-balance": "Saldo de la cuenta",
     "account-code": "Código de cuenta",
     "account-code-bigger-than-subaccounts": "El código de la cuenta %code% es más largo que las subcuentas",
-    "account-code-lower-than-parent": "Código de cuenta %code% es más corto que el del padre",
+    "account-code-lower-than-parent": "Kod konta %code% jest krótszy niż rodzica",
     "account-data-missing": "Faltan datos en la cuenta",
     "account-dot-code": "Punto para autocompletar ceros. Ejemplo: 11.1 = 1100000001",
     "account-length": "Longitud de subcuenta",
@@ -48,7 +48,7 @@
     "action": "Acción",
     "actions": "Acciones",
     "active": "Activo",
-    "actual-cost-price": "Precio de coste real",
+    "actual-cost-price": "Rzeczywista cena zakupu",
     "add": "Añadir",
     "add-all-disabled": "Añadir todo Deshabilitado",
     "add-all-enabled": "Añadir todo activado",
@@ -86,7 +86,7 @@
     "allow-post-data": "Permitir MODIFICAR",
     "allow-put-data": "Zezwól na DODAWANIE",
     "allow-sale-without-stock": "Permitir venta sin stock",
-    "allow-sale-without-stock-n": "Permitir la venta sin stock en nuevos productos",
+    "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
     "allow-update": "Permitir modificar",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Importe",
@@ -120,7 +120,7 @@
     "attached-files": "Archivos adjuntos",
     "attribute": "Atributo",
     "attribute-value-1": "Atributo 1",
-    "attribute-value-2": "Atributo 2",
+    "attribute-value-2": "Wartość atrybutu 2",
     "attribute-value-3": "Atributo 3",
     "attribute-value-4": "Atributo 4",
     "attribute-values": "Valores de atributo",
@@ -187,12 +187,12 @@
     "cant-associate-customer-subaccount": "Imposible asociar la subcuenta para el cliente %customerCode%",
     "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree un asiento nuevo.",
     "cant-change-agent-in-settlement": "No puede cambiar el agente. La comisión ya está liquidada.",
-    "cant-connect-database": "Imposible conectar a la base de datos",
+    "cant-connect-database": "Nie można połączyć z bazą danych",
     "cant-convert-to-innodb": "Imposible convertir la tabla '%tableName%' a InnoDB. Imprescindible para FacturaScripts.",
     "cant-create-customer-subaccount": "Imposible crear la subcuenta para el cliente %customerCode%",
     "cant-create-folder": "No se puede crear la carpeta %folderName%.",
     "cant-create-subaccount-supplier": "Imposible crear la subcuenta para el proveedor %supplierCode%",
-    "cant-delete-audit-log": "No se puede eliminar un registro de auditoria",
+    "cant-delete-audit-log": "Nie można usunąć logu audytu",
     "cant-delete-default-company": "No se puede eliminar la empresa predeterminada",
     "cant-delete-default-country": "Nie można usunąć domyślnego kraju",
     "cant-delete-default-currency": "No se puede eliminar la divisa por defecto",
@@ -210,7 +210,7 @@
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Tarjeta",
     "carrier": "Transportista",
-    "carriers": "Transportistas",
+    "carriers": "Przewoźnicy",
     "cash": "Efectivo",
     "categories": "Categorias",
     "category": "Categoría",
@@ -265,7 +265,7 @@
     "color-warning": "Color advertencia",
     "colors": "Colores",
     "column": "Columna",
-    "columns": "Columnas",
+    "columns": "Kolumny",
     "combination-code": "Código de combinación",
     "combinations": "Combinaciones",
     "commercial-terms": "Términos comerciales",
@@ -303,7 +303,7 @@
     "contract": "Contrato",
     "contracts": "Contratos",
     "control-panel": "Panel de control",
-    "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
+    "control-panel-decimal-warning": "Ostrzeżenie: ta zmiana zostanie zastosowana do cen produktów, ale także do całkowitych kwot na fakturach, księgach, etc.",
     "controller": "Controlador",
     "controller-error": "Błąd kontrolera",
     "controller-not-found": "Controlador no encontrado",
@@ -349,13 +349,13 @@
     "customer-code": "Cód. Cliente",
     "customer-commission-info": "Sólo se aplicará cuando la venta sea al cliente seleccionado",
     "customer-delivery-note": "Albarán de Cliente",
-    "customer-delivery-notes": "Albaranes de clientes",
+    "customer-delivery-notes": "Notatki dostawy klienta",
     "customer-estimation": "Presupuesto de Cliente",
     "customer-estimations": "Presupuestos a clientes",
     "customer-group": "Grupo de clientes",
     "customer-groups": "Grupos de clientes",
     "customer-invoice": "Factura de Cliente",
-    "customer-invoice-deleted-successfully": "Factura de venta %docCode% ha sido eliminada correctamente.",
+    "customer-invoice-deleted-successfully": "Faktura sprzedaży %docCode% została pomyślnie usunięta.",
     "customer-invoices": "Faktury klientów",
     "customer-not-found": "Cliente no encontrado",
     "customer-order": "Zamówienie klienta",
@@ -371,7 +371,7 @@
     "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
     "dashboard": "Tablica",
     "dashboard-backup": "Copia de seguridad",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-backup-p": "Przypominamy, że masz zainstalowany FacturaScripts na swoim PC, dlatego dane (faktury, klienci, itp...) są przechowywane tylko na Twoim PC. Regularnie twórz kopie zapasowe i przechowuj je z dala od komputera.",
     "dashboard-for": "Tablero de %company%",
     "data-source": "Datos de origen",
     "database": "Base de datos",
@@ -432,12 +432,12 @@
     "desc-business-name": "Nombre oficial del cliente, para las facturas y otros documentos.",
     "desc-business-name-2": "Nombre fiscal o legalmente registrado del cliente",
     "desc-customer-name": "Nombre por el cual el cliente es conocido. Para uso interno.",
-    "desc-parent-family": "Indica si la familia está agrupada en otro nivel superior.",
+    "desc-parent-family": "Wskaż, czy rodzina jest zgrupowana na wyższym poziomie.",
     "desc-payment-days": "Ejemplo: 1,15,31",
     "desc-provicer-business-name-2": "Descripción nombre de empresa de proveedor 2",
     "desc-provider-business-name": "Descripción nombre de empresa de proveedor",
     "desc-provider-name": "Nombre por el que es conocido el proveedor. Para uso interno.",
-    "desc-rate-code": "Código para uso interno de la tarifa.",
+    "desc-rate-code": "Kod do wewnętrznego użytku stawki.",
     "desc-vat-document": "Identificador del documento donde se aplica el impuesto",
     "description": "Opis",
     "description-1": "Descripción 1",
@@ -497,8 +497,8 @@
     "duplicated-request": "Petición duplicada",
     "duration": "Czas trwania",
     "edit": "Editar",
-    "editable": "Editable",
-    "email": "Email",
+    "editable": "Edytowalny",
+    "email": "E-mail",
     "email-bcc": "Email con copia oculta",
     "email-cc": "Email z kopią",
     "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, panel de control, preferencias de aplicación.",
@@ -534,7 +534,7 @@
     "equivalence": "Equivalencia",
     "equivalent-account-not-found": "Nie znaleziono konta równoważnego dla %accountCode% w ćwiczeniu %exerciseCode% Czy zaimportowałeś plan kont?",
     "equivalent-subaccount-not-found": "No se ha encontrado ninguna subcuenta equivalente a %subAccountCode% para copiar.",
-    "error": "ERROR: %error%",
+    "error": "BŁĄD: %error%",
     "error-checking-vat-number": "Błąd podczas sprawdzania numeru VAT '%vat-number%' w systemie VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
     "error-deleting-lines": "Error al eliminar líneas",
@@ -553,7 +553,7 @@
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
-    "es-tax-exception-e6": "España: excepción por otra causa",
+    "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Agricultura, ganadería y pesca",
@@ -567,7 +567,7 @@
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "estimation": "Presupuesto",
-    "estimation-email-subject": "Su presupuesto %code%",
+    "estimation-email-subject": "Twój kosztorys %code%",
     "estimation-email-text": "Buenos días, le adjunto su presupuesto %code%",
     "estimations": "Presupuestos",
     "event": "Wydarzenie",
@@ -615,7 +615,7 @@
     "filecache-clear": "Filecache limpiada.",
     "filecache-delete-key-item": "Eliminado elemento '%item%' de Filecache.",
     "filecache-get-key-item": "Pobrany element '%item%' z Filecache.",
-    "filecache-set-key-item": "Asignado elemento '%item%' a Filecache.",
+    "filecache-set-key-item": "Przypisany element '%item%' do Filecache.",
     "files": "Archivos",
     "filter-method": "Método del filtro",
     "filter-records-containing-indicated-value": "Filtrar registros que contienen el valor",
@@ -662,7 +662,7 @@
     "general": "Ogólny",
     "general-concepts": "Conceptos generales",
     "general-data": "Datos generales",
-    "generate": "Generar",
+    "generate": "Generuj",
     "generate-accounting-entries": "Generuj wpisy księgowe",
     "generate-accounting-entry": "Generar asiento contable",
     "generate-doc-type": "Generar tipo de documento",
@@ -681,7 +681,7 @@
     "generated-customer-groups": "%quantity% grupos de clientes generados.",
     "generated-customer-orders": "%quantity% pedidos de cliente generados.",
     "generated-customers": "%quantity% wygenerowanych klientów.",
-    "generated-families": "%quantity% familias generadas.",
+    "generated-families": "%quantity% wygenerowanych rodzin.",
     "generated-invoice": "Factura generada",
     "generated-manufacturers": "%quantity% fabricantes generados.",
     "generated-products": "%quantity% productos generados.",
@@ -705,7 +705,7 @@
     "group-by-week-unixtime": "Agrupar por semana (unixtime)",
     "group-by-year": "Agrupar por año",
     "group-by-year-unixtime": "Agrupar por año (unixtime)",
-    "group-more-docs-p": "Si lo deseas puedes agrupar junto a otros documentos de este cliente\/proveedor",
+    "group-more-docs-p": "Jeśli chcesz, możesz grupować razem z innymi dokumentami tego klienta\/dostawcy",
     "group-name": "Nombre del Grupo",
     "group-or-split": "Agrupar o partir",
     "group-or-split-p": "Ten kreator pozwala generować nowy dokument na podstawie linii innych dokumentów. Wybierz ilości, które chcesz użyć, datę nowego dokumentu i naciśnij przycisk generuj.",
@@ -728,7 +728,7 @@
     "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Crear el asiento contable para la regularización de impuestos del periodo",
     "hint-vat-register": "Zobacz\/zmodyfikuj rejestr podatku",
-    "history": "Historial",
+    "history": "Historia",
     "homepage": "Página de inicio",
     "host": "Gospodarz",
     "hour": "Hora",
@@ -821,7 +821,7 @@
     "june": "Junio",
     "justified": "Justificado",
     "key-google-maps": "Clave de Google Maps",
-    "keys": "Claves",
+    "keys": "Klucze",
     "lang-code": "Código de idioma",
     "language": "Idioma",
     "languages-ca_ES": "Catalán",
@@ -857,7 +857,7 @@
     "last-price-sale": "Ostatnia cena sprzedaży",
     "last-purchase-price": "Último precio de compra",
     "last-quarter": "El pasado cuatrimestre",
-    "last-semester": "El pasado semestre",
+    "last-semester": "Ostatni semestr",
     "last-trimester": "El último trimestre",
     "last-update": "Última modificación",
     "last-user": "Último usuario",
@@ -994,15 +994,15 @@
     "mysql-socket-p": "Este campo sólo es requerido en algunos hostings con MySQL.",
     "name": "Nazwa",
     "name-or-business-name": "Nombre o razón social",
-    "nature": "Naturaleza",
+    "nature": "Natura",
     "need-help-password": "Potrzebujesz pomocy z hasłem?",
-    "negative-balance": "Saldo negativo",
+    "negative-balance": "Saldo ujemne",
     "net": "Neto",
     "new": "Nuevo",
     "new-acc-entry-line-p": "Wprowadzisz linię, wpisując poniżej kod podkonta lub naciskając przycisk podkonta i wybierając podkonto.",
     "new-address": "Nueva dirección",
     "new-customer": "nuevo cliente",
-    "new-customers": "Nuevos clientes",
+    "new-customers": "Nowi klienci",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "Nueva contraseña",
     "new-price": "Nuevo precio",
@@ -1047,7 +1047,7 @@
     "number": "Número",
     "number-attachments": "Liczba załączników",
     "number-length": "Longitud del número",
-    "number-recipients": "Nº perceptores",
+    "number-recipients": "Liczba odbiorców",
     "number2": "Número 2",
     "numeric-formats": "Formaty numeryczne",
     "numsupplier": "Núm. proveedor",
@@ -1072,7 +1072,7 @@
     "option": "Opción",
     "optional": "opcional",
     "options": "Opciones",
-    "options-button-header": "Maquetación y permisos",
+    "options-button-header": "Układ i uprawnienia",
     "order": "Pedido",
     "order-email-subject": "Su pedido %code%",
     "order-email-text": "Buenos días, le adjunto su pedido %code%",
@@ -1105,7 +1105,7 @@
     "partnumber": "Número de pieza",
     "passenger": "Pasażer",
     "password": "Hasło",
-    "pattern": "Patrón",
+    "pattern": "Wzór",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
     "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
     "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
@@ -1197,7 +1197,7 @@
     "private": "Privado",
     "private-key": "Clave privada",
     "process": "Proceso",
-    "processing": "Procesando",
+    "processing": "Przetwarzanie",
     "product": "Producto",
     "product-not-found": "Producto %ref% no encontrado",
     "products": "Productos",
@@ -1287,7 +1287,7 @@
     "repeat-new-password": "Repite la contraseña",
     "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
-    "report": "Informe",
+    "report": "Raport",
     "report-grouping-account": "Agrupar por cuentas",
     "report-non-grouping-account": "No agrupar por cuentas",
     "report-taxes-p": "Ten raport umożliwia uzyskanie rozliczenia podatków z faktur zakupu lub sprzedaży w wybranym zakresie",
@@ -1302,7 +1302,7 @@
     "restore": "Restaurar",
     "restore-data": "Restaurar datos",
     "result": "Resultado",
-    "retention": "Retención",
+    "retention": "Zatrzymanie",
     "retentions": "Zatrzymania",
     "review-date": "Data przeglądu",
     "right": "Derecha",
@@ -1353,7 +1353,7 @@
     "sent-a-picture": "Envió una imagen",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
-    "sepa-suffix": "Sufijo SEPA",
+    "sepa-suffix": "Przyrostek SEPA",
     "september": "Septiembre",
     "sequences": "Secuencias",
     "serial-number": "Número de Serie",
@@ -1368,10 +1368,10 @@
     "settings": "Ajustes",
     "settlement": "Rozliczenie",
     "settlement-product": "Producto de liquidación",
-    "settlements": "Liquidaciones",
-    "setup-options": "Ajustar opciones",
+    "settlements": "Rozliczenia",
+    "setup-options": "Konfiguracja opcji",
     "shipping": "Envío",
-    "shipping-address": "Dirección de envío",
+    "shipping-address": "Adres dostawy",
     "shop": "Tienda",
     "shops": "Tiendas",
     "short": "Corto",
@@ -1414,12 +1414,12 @@
     "start": "Inicio",
     "start-date": "Fecha de inicio",
     "start-hour": "Hora de inicio",
-    "start-time": "Hora inicio",
+    "start-time": "Czas rozpoczęcia",
     "starting-cron": "Iniciando cron de FacturaScripts...",
     "state": "Estado",
     "states": "Estados",
     "status": "Estado",
-    "status-document": "Estado del documento",
+    "status-document": "Stan dokumentu",
     "status-name-valid-length": "Nombre del estado no válido (debe tener entre 1 y 20 carácteres).",
     "status-value-is-number": "Pole statusu musi być liczbą.",
     "stock": "Stock",
@@ -1495,7 +1495,7 @@
     "tasks-personal-title": "Tareas personales",
     "tax": "Impuesto",
     "tax-area": "Zona de impuestos",
-    "tax-areas": "Zonas de impuestos",
+    "tax-areas": "Obszary podatkowe",
     "tax-base": "Base Imponible",
     "tax-credit-account": "Cuenta de crédito para impuestos",
     "tax-debit-account": "Cuenta de débito para impuestos",
@@ -1520,7 +1520,7 @@
     "this-last-year": "Los últimos 365 días",
     "this-month": "Este mes",
     "this-week": "Esta semana",
-    "this-year": "Este año",
+    "this-year": "Ten rok",
     "thousands-separator": "Separador de millares",
     "thursday": "Jueves",
     "ticket": "Ticket",
@@ -1537,7 +1537,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Coste total",
-    "total-purchases": "Total compras",
+    "total-purchases": "Całkowite zakupy",
     "total-sales": "Całkowita sprzedaż",
     "total-value-error": "Valor total de %docType% %docCode% incorrecto (%docTotal%). Valor correcto: %calcTotal%",
     "total-with-taxes": "Total + impuestos",
@@ -1548,7 +1548,7 @@
     "town": "Población",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
-    "transfers": "Tranferencias",
+    "transfers": "Przesunięcia",
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
@@ -1593,7 +1593,7 @@
     "uploaded-at": "Cargado en",
     "url": "Dirección web",
     "use-gaps": "Usar huecos",
-    "use-holes-invoices-esp": "Jeśli odznaczysz użytkowanie otworów w fakturach i usuniesz któreś, pozostanie otwór w fakturyacji i będziesz miał problemy z urzędem skarbowym",
+    "use-holes-invoices-esp": "Jeśli odznaczysz używanie otworów w fakturach i usuniesz którąś, lukę pozostanie w fakturowaniu i będziesz mieć problemy z urzędem skarbowym",
     "user": "Usuario",
     "user-and-config": "Usuario y configuración",
     "users": "Usuarios",
@@ -1620,7 +1620,7 @@
     "VAT-register": "Impuestos",
     "vat-regularization": "Regularización de IVA",
     "vehicle": "Vehículo",
-    "verified": "Verificado",
+    "verified": "Zweryfikowany",
     "version": "Wersja",
     "video": "Video",
     "vies-check-success": "Numer '%vat-number%' jest zarejestrowany w systemie VIES",
@@ -1656,7 +1656,7 @@
     "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
-    "x-column": "Columna X",
+    "x-column": "Kolumna X",
     "x-operation": "Operación sobre X",
     "y-column": "Columna Y",
     "year": "Año",
