--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -271,13 +271,13 @@
     "commercial-terms": "Termos comerciais",
     "commission": "commission",
     "commission-general-info": "commission-general-info",
-    "commission-settlement": "commission-settlement",
+    "commission-settlement": "Liquidação de comissões %code%",
     "commissions": "Comissões",
     "common-data": "Dados comuns",
     "common-error": "Erro",
     "companies": "Empresas",
     "company": "Empresa",
-    "company-commission-info": "company-commission-info",
+    "company-commission-info": "Aplica-se apenas à empresa selecionada",
     "company-manager": "Gerente de empresa",
     "company-name": "Nome da empresa",
     "company-warehouse": "Empresa\/Armazém",
@@ -334,7 +334,7 @@
     "created": "Criado",
     "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
     "creation-date": "Data de criação",
-    "credit": "Credit",
+    "credit": "Crédito",
     "crm": "CRM",
     "cron-job": "cron-job",
     "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
@@ -401,7 +401,7 @@
     "december": "Dezembro",
     "decimal-separator": "Decimal",
     "decimals": "Decimais",
-    "default": "Default",
+    "default": "Padrão",
     "default-customer": "Cliente Padrão",
     "default-retention": "retenção-padrão",
     "default-role": "F",
@@ -412,7 +412,7 @@
     "delete": "Remover",
     "delete-all": "delete-all",
     "delete-closing": "delete-closing",
-    "delete-data": "Delete data",
+    "delete-data": "Eliminar dados",
     "delete-file": "Eliminar ficheiro",
     "delete-logs": "Eliminar historial",
     "delete-opening": "Eliminar abertura",
@@ -718,7 +718,7 @@
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "health",
-    "height": "Alto",
+    "height": "Altura",
     "hello": "Hola",
     "help": "Socorro",
     "help-button-p": "Consulta la ayuda en cada pantalla",
@@ -814,7 +814,7 @@
     "january": "Enero",
     "job-name": "Nome do Trabalho",
     "journal": "Journal",
-    "journal-closing": "journal-closing",
+    "journal-closing": "Fecho de jornal",
     "journal-opening": "journal-opening",
     "journals": "Journals",
     "july": "Julho",
@@ -856,7 +856,7 @@
     "last-price-estimation": "Último preço de orçamento",
     "last-price-sale": "Último precio de venta",
     "last-purchase-price": "último-preço-de-compra",
-    "last-quarter": "last-quarter",
+    "last-quarter": "Último trimestre",
     "last-semester": "Último semestre",
     "last-trimester": "Último trimestre",
     "last-update": "last-update",
@@ -974,7 +974,7 @@
     "month-3": "Marzo",
     "month-4": "Abril",
     "month-5": "Maio",
-    "month-6": "Junio",
+    "month-6": "Junho",
     "month-7": "Julio",
     "month-8": "Agosto",
     "month-9": "Setembro",
@@ -1116,7 +1116,7 @@
     "payment-days": "Dias de pagamento",
     "payment-method": "Método de pagamento",
     "payment-methods": "Métodos de Pagamento",
-    "payments": "payments",
+    "payments": "Pagamentos",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
@@ -1222,7 +1222,7 @@
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
     "pvptotal-line-error": "Erro no valor pvptotal da linha 0 do documento. Valor correto: 1",
     "quantity": "Quantidade",
-    "quantity-abb": "quantity-abb",
+    "quantity-abb": "Quantidade-abrev",
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
@@ -1251,7 +1251,7 @@
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
     "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Retificativa",
-    "rectifying-serie": "rectifying-serie",
+    "rectifying-serie": "Série retificativa",
     "redirect": "Redirección",
     "reference": "Referência",
     "reference+description": "Reference + Description",
@@ -1295,7 +1295,7 @@
     "request-sent": "request-sent",
     "required": "required",
     "requires-core": "Requiere FacturaScripts %version%",
-    "reserved": "Reserved",
+    "reserved": "Reservado",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
     "resource": "Recurso",
     "respond": "Responder",
@@ -1336,7 +1336,7 @@
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
     "selector-number": "Seletor",
-    "send": "send",
+    "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
@@ -1451,10 +1451,10 @@
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "A soma da rede das linhas do IVA deve ser: 0",
     "sum-total-line-tax-must-be": "A soma dos totais IVA das linhas IVA deve ser: 0",
-    "summary": "Summary",
+    "summary": "Resumo",
     "sums-and-balances": "Sumas y saldos",
     "sunday": "domingo",
-    "supplied": "supplied",
+    "supplied": "Suprido",
     "supplied-amount": "quantidade-fornecida",
     "supplied-subaccount-not-found": "supplied-subaccount-not-found",
     "supplier": "Fornecedor",
@@ -1508,7 +1508,7 @@
     "template-not-found": "Modelo não encontrado",
     "templates": "Plantillas",
     "test": "Test",
-    "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
+    "test-mail-not-implemented": "O teste do controlador de correio Mail não está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
     "text-color": "Cor do texto",
     "texts": "Textos",
@@ -1558,7 +1558,7 @@
     "type": "Tipo",
     "type-alert": "Type alert",
     "type-critical": "Type critical",
-    "type-debug": "Type debug",
+    "type-debug": "Tipo debug",
     "type-emergency": "Tipo de emergência",
     "type-error": "Type error",
     "type-info": "Informação do tipo",
@@ -1618,7 +1618,7 @@
     "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "VAT registration",
-    "vat-regularization": "VAT Regularization",
+    "vat-regularization": "Regularização de IVA",
     "vehicle": "Vehículo",
     "verified": "verificado",
     "version": "Versão",
@@ -1657,7 +1657,7 @@
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
-    "x-operation": "x-operation",
+    "x-operation": "Operação sobre X",
     "y-column": "y-column",
     "year": "Ano",
     "year-wildcard-info": "Ano atual (da data de hoje)",
